--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
 
 <script>
     var weekday = new Array(7);
-    weekday[0] = "sunday";
-    weekday[1] = "monday";
-    weekday[2] = "tuesday";
-    weekday[3] = "wednesday";
-    weekday[4] = "thursday";
-    weekday[5] = "friday";
-    weekday[6] = "saturday";
+    weekday[0] = "niedziela";
+    weekday[1] = "poniedziałek";
+    weekday[2] = "wtorek";
+    weekday[3] = "środa";
+    weekday[4] = "czwartek";
+    weekday[5] = "piątek";
+    weekday[6] = "sobota";
 
-    const monthNames = ["january", "february", "march", "april", "may", "june",
-      "july", "august", "september", "october", "november", "december"
+    const monthNames = ["styczeń", "luty", "marzec", "kwiecień", "maj", "czerwiec",
+      "lipiec", "sierpień", "wrzesień", "październik", "listopad", "grudzień"
     ];
 
     
@@ -58,11 +58,11 @@
     var greet;
 
     if (hrs < 12)
-        greet = 'good morning, Meg.  ';
-    else if (hrs >= 12 && hrs <= 17)
-        greet = 'good afternoon, Meg. ';
-    else if (hrs >= 17 && hrs <= 24)
-        greet = 'good evening, Meg.  ';
+        greet = 'miłego poranka, Meg.  ';
+    else if (hrs >= 12 && hrs <= 18)
+        greet = 'spokojnego popołudnia, Meg. ';
+    else if (hrs >= 18 && hrs <= 24)
+        greet = 'dobry wieczór, Meg.  ';
 
     document.getElementById('lbl').innerHTML = `
         <div class="container">
